templates/index.html: sure, add an epigraph

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,12 @@
 
 {% block content %}
 
+<p><i>“Technology is neither good nor bad; nor is it neutral.”<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;—
+    <a rel="noopener" target="_blank"
+      href="https://en.wikipedia.org/wiki/Melvin_Kranzberg#Kranzberg's_laws_of_technology">Kranzberg’s
+      First Law</a></i>
+</p>
+
 <p class="lede">I’m a researcher at the
   <a rel="noopener" target="_blank" href="https://cfa.harvard.edu/">Center for
     Astrophysics | Harvard &amp; Smithsonian</a>. I spend most of my time
