Updates toplevel info in a few places

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,9 @@
       First Law</a></i>
 </p>
 
-<p class="lede">I’m a researcher at the
+<p class="lede">I’m the Technical Lead of the IAU <a rel="noopener" target="_blank"
+    href="https://minorplanetcenter.net/">Minor Planet Center</a>
+  at the
   <a rel="noopener" target="_blank" href="https://cfa.harvard.edu/">Center for
     Astrophysics | Harvard &amp; Smithsonian</a>. I spend most of my time
   designing and building astrophysical data systems. Underpinning this work is
